feat(demo): 新增demo-npm项目结构，包含多个功能模块和示例扩展，优化配置文件，支持跨域和代理设置

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ vscode-default-extensions/
 dist/
 vscode-server/
 demo/src/features/rooveterinaryinc.roo-cline-3.12.3
+demo-npm/src/features/rooveterinaryinc.roo-cline-3.12.3
