feat(demo): 更新配置文件，启用自动保存，禁用TypeScript服务器日志，增强用户体验；在远程扩展加载成功后自动点击辅助栏操作，提升交互性

--- a/demo-npm/src/user/configuration.json
+++ b/demo-npm/src/user/configuration.json
@@ -17,11 +17,12 @@
     "accessibility.signals.onDebugBreak": {
         "sound": "on"
     },
-    "files.autoSave": "off",
+    "files.autoSave": "on",
     "debug.toolBarLocation": "docked",
     "editor.experimental.asyncTokenization": true,
     "terminal.integrated.tabs.title": "${sequence}",
-    "typescript.tsserver.log": "normal",
+    "typescript.tsserver.log": "off",
     "workbench.sideBar.location": "left",
     "editor.experimental.preferTreeSitter": ["typescript"]
+    
 }
