--- a/demo-npm/package.json
+++ b/demo-npm/package.json
@@ -12,8 +12,10 @@
     "typecheck": "tsc --noEmit",
     "check-build": "npm run lint && npm run typecheck",
     "build": "npm run check-build && vite --config vite.config.ts build",
+    "buildEsm": "vite --config vite.config.ts build",
     "build:netlify": "npm run check-build && vite --config vite.netlify.config.ts build",
-    "start:debugServer": "tsx src/debugServer.ts"
+    "start:debugServer": "tsx src/debugServer.ts",
+    "preview": "vite preview --config vite.preview.config.ts --port 23967"
   },
   "devDependencies": {
     "@codingame/esbuild-import-meta-url-plugin": "^1.0.3",
