refactor(demo-npm): 优化活动栏按钮隐藏逻辑
- 移除不必要的控制台日志输出
- 将活动栏按钮隐藏逻辑移至单独的函数中
- 在初始化和切换模式时调用该函数
- 调整侧边栏宽度
- 更改默认颜色主题为 Light+
- 修改文件自动保存设置为延迟保存

--- a/demo-npm/src/user/configuration.json
+++ b/demo-npm/src/user/configuration.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Default Dark+",
+    "workbench.colorTheme": "Default Light+",
     "workbench.iconTheme": "vs-seti",
     "editor.autoClosingBrackets": "languageDefined",
     "editor.autoClosingQuotes": "languageDefined",
@@ -17,7 +17,7 @@
     "accessibility.signals.onDebugBreak": {
         "sound": "on"
     },
-    "files.autoSave": "on",
+    "files.autoSave": "afterDelay",
     "debug.toolBarLocation": "docked",
     "editor.experimental.asyncTokenization": true,
     "terminal.integrated.tabs.title": "${sequence}",
